[project]
name = "Adaptive_sampling_for_discovery"
version = "0.1.0"
authors = [
    { name = "Ziping Xu"},
]
requires-python = ">= 3.11"
dependencies = [ "numpy>=2.0.1,<2.1", "pandas>=2.2.2,<2.3", "joblib>=1.4.2,<1.5", "scikit-learn>=1.5.1,<1.6", "matrix-completion>=0.0.2,<0.1", "cvxpy>=1.5.2,<1.6", "bayes-logistic>=0.2.0,<0.3", "matplotlib>=3.9.1,<3.10", "tqdm>=4.66.4,<4.67"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
Adaptive_sampling_for_discovery = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.system-requirements]
linux = "3.10"
libc = "2.17"

[tool.setuptools.packages]
find = {}

[tool.ruff.format]
quote-style = "single"
